# parquet-stream-writer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/parquet_stream_writer/: __init__.py  writer.py
tests/: tests.py
